added css styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,158 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
+:root {
+    --light: #dadccd;
+    --pink: hsl(330, 7%, 12%);
+    --dark: #76847b;
+    --medium: #a898a9;
+  }
 
-body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-/* Placement of the header box */
-
-
-.Broadt {
-    padding-block:100px,25px,25px.25px;
-    color: rgb(241, 78, 119);
+  /* Name in left corner for header */
+.broadt {
+    background-color:var(--dark);
+    color: var(--light);
+    font-size:35px ;
+    }
+    /* clickable links in nav bar */
+    .header nav {
+        display: flex;
+       padding-bottom: 15px;
+        margin-right: 20px; 
+        align-items: flex-end;
+        font-family:BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica;
+        font-size: 18px;
+    }
+    main {
+        display:flex; 
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+    }
+    .about-me-img{
+width: 30rem;
+    }
+    .about-me-img img {
+        width:100% ;
+    }
+    .about-me-content {
+        padding: 3rem;
+        display:flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        
+        
+    }
+    .about-me-content p{
+        padding: 3rem;
+        max-width: 70rem; ;
+    }
+    .justify-center {
+        justify-content: center;
+      }
+    /* clickable link specifics/styling */
+    .card-column {
+        flex: 1 0 100%;
+        padding: 1.5rem;
+        transition: flex-basis 500ms linear;
+        margin-bottom: 1.5rem;
+      }
+      .card-column {
+        flex: 1 0 100%;
+        padding: 1.5rem;
+        transition: flex-basis 500ms linear;
+        margin-bottom: 1.5rem;
+      }
+      
+      .code-card {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        min-height: 100%;
+        padding: 2rem;
+        color: var(--medium);
+        outline: 2px dashed var(--dark);
+        outline-offset: -2px;
+        transition: all 0.5s ease-in-out;
+      }
+    
+    a {
+        color: var(--dark);
+        text-decoration: underline;
+        font-size: 20px;
+    }
+    .header nav ul  {
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-end;
+ 
+    }
+  body {
   
+    font-family:BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+      Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    font-size: 1.75rem;
+    line-height: 1.5;
+    color: var(--dark);
+    background-color: var(--light);
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-bottom: 0.625rem;
+    color: var(--medium);
+  }
+  h1 {
+    /* 4rem = 40px (4 * 10px) */
+    font-size: 4rem;
+  }
+  
+  h2 {
+    font-size: 3.5rem;
+  }
+  
+  h3 {
+    font-size: 3rem;
+  }
+  
+  h4 {
+    font-size: 2.5rem;
+  }
+  
+  h5 {
+    font-size: 2rem;
+  }
+  
+  h6 {
+    font-size: 1.5rem;
+  }
+  
+  p {
+    margin-bottom: 1rem;
+  }
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    padding: 10rem ;
+  }
+  
+/* Header Styling, header box */
+.header {
+    display: flex;
+    justify-content: flex-end;
+   font-size: 20px;
+    font-family:BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica;
+    background-color:var(--light);
+
 }
-.nav ul li {
-    display: inline-block;
-    float: right;
-    background-color:rgb(226, 162, 223);
-    margin-left: 100px;
-}
+
+/* top of poge image */
 .Background{
     height: 150px;
     width: 100%;
@@ -28,6 +160,20 @@ body {
     background-image: url("/assets/images/backround for portfolio.jpg");
     background-position: center;
 }
-.Web Developer{
-    display: flex;
+/* header 2 in image font styling  */
+h2{
+padding-top: 100px;
+    float: right;
+    background-color:var(--dark);
+color:var(--light);
 }
+
+
+  @media screen and (max-width: 992px) {
+    .card {
+      width: 50%;}
+    }
+    @media screen and (max-width: 768px) {
+        .card {
+          width: 100%;}
+        }
